--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.7.4
   image_cropper: ^1.3.0
+  google_fonts: ^2.0.0
 
 dev_dependencies:
   flutter_test:
