--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,10 +6,21 @@ buildscript {
     }
 
     dependencies {
-        classpath "androidx.core:core:1.3.2"
+        
         classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
+
+    subprojects {
+    project.configurations.all {
+	resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'androidx.core' &&
+	       !details.requested.name.contains('androidx')) {
+		details.useVersion "1.3.2"
+            }
+	}
+    }    
+}
 }
 
 allprojects {
